<resources>
    <string name="app_name">QiuShi</string>

    <!--底部菜单栏-->
    <string name="title_qiu_shi">糗事</string>
    <string name="title_qiu_shi_friends">糗友圈</string>
    <string name="title_live_broadcast">直播</string>
    <string name="title_live_notes">小纸条</string>
    <string name="title_me">我</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--专享-->
    <string name="head_portrait">Head portrait</string>
    <string name="good">good</string>
    <string name="bad">bad</string>
    <string name="reply">Reply</string>
    <string name="share">share</string>
    <string name="pictures">Pictures about the article</string>

    <!--我-->
    <string name="me_personal">个人中心</string>
</resources>
