<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    >

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        >

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:contentDescription="@string/head_portrait"
            />

        <TextView
            android:id="@+id/tv_vip_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/iv_head"
            android:gravity="center_vertical"
            android:textColor="@color/vip_title_name"
            android:textSize="@dimen/vip_text_16sp"
            android:lines="1"
            android:ellipsize="end"
            android:layout_marginStart="@dimen/vip_text_name_8dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_vip_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_head"
        android:ellipsize="end"
        android:maxLines="10"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@color/vip_title_text"
        android:textSize="@dimen/vip_text_16sp"
        />
    <ImageView
        android:id="@+id/iv_content_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="500dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/tv_vip_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/pictures"
        />

    <RelativeLayout
        android:id="@+id/rl_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_content_image"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="好笑 736  ·  评论 14  ·  分享 3"
            android:textColor="@color/vip_title_comment"
            android:textSize="@dimen/vip_text_12sp"
            android:layout_marginTop="@dimen/vip_text_comment_12dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_below="@+id/rl_comment"
        >

        <ImageView
            android:id="@+id/iv_vip_satisfied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/good"
            android:paddingEnd="15dp"
            android:paddingStart="30dp"
            android:src="@drawable/ic_sentiment_very_satisfied_black_24dp"
            />

        <ImageView
            android:id="@+id/iv_dissatisfied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_vip_satisfied"
            android:contentDescription="@string/bad"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:src="@drawable/ic_sentiment_very_dissatisfied_black_24dp"
            />

        <ImageView
            android:id="@+id/iv_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_dissatisfied"
            android:contentDescription="@string/reply"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:src="@drawable/ic_chat_bubble_outline_black_24dp"
            />

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/share"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:src="@drawable/ic_more_vert_black_24dp"
            />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/iv_more"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share_black_24dp"
            />

    </RelativeLayout>
</RelativeLayout>